--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,10 +115,14 @@ Layout styles
 
 .NHS{
 	width:200px;
-	height:80px;
+	height:50px;
 	}
 
+.HomeIcon{
+width:125px;
+padding: 25px;
 
+}
 
 
 /* -----------------------
@@ -174,6 +178,8 @@ Single styles
 ------------------------*/
 
 .img-responsive { max-width: 100%; }
+
+.img-responsive2 {width:300px height:250px;}
 
 .btn
 {
@@ -314,7 +320,29 @@ footer-distributed{
 
 	margin-left: 3px;
 }
+/* Display list items side by side */
+ul.breadcrumb li {
+    display: inline;
+}
 
+/* Add a slash symbol (/) before/behind each list item */
+ul.breadcrumb li+li:before {
+    padding: 4px;
+    color: black;
+    content: "/\00a0";
+}
+
+/* Add a color to all links inside the list */
+ul.breadcrumb li a {
+    color: #0275d8;
+    text-decoration: none;
+}
+
+/* Add a color on mouse-over */
+ul.breadcrumb li a:hover {
+    color: #01447e;
+    text-decoration: underline;
+}
 /* -----------------------
 Wide styles
 ------------------------*/
@@ -354,6 +382,8 @@ Wide styles
 		padding: 0;
 		border-bottom: 0;
 	}
+    
+    
     
   
 }
